:sparkles: feat: adicionando listagem e form de empresas em adm

--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -11,7 +11,7 @@
           <!-- <li nz-menu-item routerLink="/icms" routerLinkActive="active">ICMS</li>
           <li nz-menu-item routerLink="/teste">Faturas</li>
           <li nz-menu-item>Sobre</li> -->
-          <li nz-menu-item routerLink="/adm" routerLinkActive="active" *ngIf="isAdmin()">administrar</li>
+          <li nz-menu-item routerLink="/adm/empresas" routerLinkActive="active" *ngIf="isAdmin()">administrar</li>
         </ul>
       </div>
 
