--- a/front-end/src/app/pages/adm/adm.component.html
+++ b/front-end/src/app/pages/adm/adm.component.html
@@ -6,6 +6,10 @@
                     <span nz-icon nzType="credit-card" nzTheme="outline"></span>
                     Empresas
                 </li>
+                <li nz-menu-item routerLink="/adm/precos" routerLinkActive="active">
+                    <span nz-icon nzType="credit-card" nzTheme="outline"></span>
+                    Preços
+                  </li>
                 <li nz-menu-item routerLink="/adm/produtos" routerLinkActive="active">
                     <span nz-icon nzType="credit-card" nzTheme="outline"></span>
                     Produtos
