--- a/front-end/src/app/pages/icms/icms-grupo-notas/icms-grupo-notas.component.html
+++ b/front-end/src/app/pages/icms/icms-grupo-notas/icms-grupo-notas.component.html
@@ -54,7 +54,7 @@
     </a>
 
 
-    <nz-table #headerTable [nzData]="relatorios.length ? relatorios : []" [nzShowPagination]="false" class="table">
+    <nz-table #headerTable [nzData]="relatorios" [nzShowPagination]="false" class="table">
         <thead>
             <tr>
                 <th colspan="2">
@@ -83,25 +83,25 @@
                     <p>Ação</p>
                 </td>
             </tr>
-            <tr *ngFor="let item of relatorios">
+            <tr *ngFor="let data of headerTable.data">
                 <td class="td-table">
                     <nz-flex [nzVertical]="true">
-                        <p>{{ item.id }}</p>
+                        <p>{{ data.id }}</p>
                     </nz-flex>
                 </td>
                 <td class="td-table">
                     <nz-flex [nzVertical]="true">
-                        <p>{{ item.valorTotal }}</p>
+                        <p>{{ data.valorTotal }}</p>
                     </nz-flex>
                 </td>
                 <td class="td-table">
                     <nz-flex [nzVertical]="true">
-                        <p>{{ item.valorCalculado }}</p>
+                        <p>{{ data.valorCalculado }}</p>
                     </nz-flex>
                 </td>
                 <td [nzAlign]="'center'" class="td-table">
                     <ng-container>
-                        <button nz-button [nzSize]="'large'" class="botao botaobaixa" (click)="getPDF(item.id)">Mostrar Relatorio</button>
+                        <button nz-button [nzSize]="'large'" class="botao botaobaixa" (click)="getPDF(data.id)">Mostrar Relatorio</button>
                     </ng-container>
                 </td>
             </tr>
