estilização nas telas de admin completa

--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -15,9 +15,10 @@
         </ul>
       </div>
 
-      <div class="user-profile" (click)="logout()">
-        <img src="../assets/svgs/user.svg" alt="imagem de usuário">
-      </div>
+      <a class="sair" (click)="logout()">
+        <p class="sair-text">Sair</p>
+        <img src="../assets/svgs/sair.svg" alt="imagem de logout" class="sair-img">
+      </a>
     </nz-header>
 
     <nz-content>
