--- a/front-end/src/app/pages/adm/adm.component.html
+++ b/front-end/src/app/pages/adm/adm.component.html
@@ -1,4 +1,5 @@
-<nz-layout>
+
+<nz-layout class="container">
     <nz-layout>
         <nz-sider nzTheme="light" class="ant-menu-vertical">
             <ul nz-menu [nzMode]="'vertical'" [nzTheme]="'light'" class="menu-adm">
