--- a/front-end/src/app/pages/adm/multiplicadores/multiplicadores.component.scss
+++ b/front-end/src/app/pages/adm/multiplicadores/multiplicadores.component.scss
@@ -10,4 +10,13 @@ nz-select {
 
 .btn-buscar {
     width: 100%;
+    border-radius: 10px;
+}
+
+tbody {
+  height: 50vh;
+}
+
+.btn-novo {
+  border-radius: 10px;
 }
