--- a/front-end/src/app/pages/inicio/inicio.component.scss
+++ b/front-end/src/app/pages/inicio/inicio.component.scss
@@ -1,12 +1,3 @@
-body {
-  padding: 0;
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  width: 100vw;
-  overflow: hidden;
-}
 nz-card {
   width: 400px;
   margin-top: 16px;
@@ -62,6 +53,13 @@ img {
   margin: auto, 0;
 }
 
+.table {
+  margin-top: 5em;
+  border-radius: 20px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
+  overflow: hidden; 
+}
 
 @media (max-width: 1200px) {
   nz-card {
