--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -22,6 +22,7 @@
 
     <nz-content>
       <div>
+        <app-alerta></app-alerta>
         <router-outlet></router-outlet>
       </div>
     </nz-content>
