feat: usuario form adm

--- a/front-end/src/app/pages/adm/usuarios/usuarios.component.html
+++ b/front-end/src/app/pages/adm/usuarios/usuarios.component.html
@@ -38,10 +38,10 @@
                                   <button nz-button [nzSize]="'large'" nzType="primary"
                                       class="botao botaoEditar" (click)="editarItem(data)">Editar</button>
                               </nz-col>
-                              <!-- <nz-col>
+                              <nz-col>
                                   <button nz-button [nzSize]="'large'" nzType="primary" nzDanger
                                       class="botao botaoEditar" (click)="excluirItem(data)">Excluir</button>
-                              </nz-col> -->
+                              </nz-col>
                           </nz-row>
                       </td>
                   </tr>
