--- a/front-end/src/app/pages/login/login.component.html
+++ b/front-end/src/app/pages/login/login.component.html
@@ -13,10 +13,10 @@
                 <input type="text" name="nomeUsuario" id="nomeUsuario" [(ngModel)]="usuario.nomeUsuario">
                 <label for="senha">Senha</label>
                 <input type="password" name="senha" id="senha" [(ngModel)]="usuario.senha">
-                <a href="#" class="esqueceu-senha">Esqueceu a senha?</a>
+                <!-- <a href="#" class="esqueceu-senha">Esqueceu a senha?</a> -->
             </div>
             <input type="submit" value="Entrar" [disabled]="form.invalid" class="botao" routerLink="/inicio">
-            <a href="#" class="cadastre-se">Cadastre-se</a>
+            <!-- <a href="#" class="cadastre-se">Cadastre-se</a> -->
         </form>
     </div>
 </div>
