nomenclaturas alteradas e listagem de NCM no cadastro de produto feitos

--- a/front-end/src/app/pages/adm/adm.component.html
+++ b/front-end/src/app/pages/adm/adm.component.html
@@ -13,7 +13,7 @@
                   </li>
                 <li nz-menu-item routerLink="/adm/produtos" routerLinkActive="active">
                     <span nz-icon nzType="credit-card" nzTheme="outline"></span>
-                    Produtos
+                    NCM
                 </li>
                 <li nz-menu-item routerLink="/adm/aliquotas" routerLinkActive="active">
                     <span nz-icon nzType="credit-card" nzTheme="outline"></span>
