--- a/front-end/src/app/pages/adm/aliquota/aliquota.component.html
+++ b/front-end/src/app/pages/adm/aliquota/aliquota.component.html
@@ -20,7 +20,7 @@
                         <th nzWidth="5%" [nzAlign]="'center'">Id</th>
                         <th>Origem</th>
                         <th>Destino</th>
-                        <th nzWidth="15%">Porcentagem</th>
+                        <th nzWidth="15%">Alíquota Interestadual</th>
                         <th nzWidth="20%" [nzAlign]="'center'">Ações</th>
                     </tr>
                 </thead>
