--- a/front-end/src/app/pages/adm/produtos-form/produtos-form.component.html
+++ b/front-end/src/app/pages/adm/produtos-form/produtos-form.component.html
@@ -9,12 +9,18 @@
             </nz-form-item>
         </nz-col>
         <nz-col nzXs="24" nzLg="12">
-            <nz-form-item>
-                <nz-form-label nzSpan="24">NCM</nz-form-label>
-                <nz-form-control>
-                    <input nz-input nz-col nzSize="large" nzSpan="24" placeholder="NCM" [(ngModel)]="produto.ncm" [ngModelOptions]="{standalone: true}" ngDefaultControl/>
-                </nz-form-control>
-            </nz-form-item>
+          <nz-form-item>
+            <nz-form-label nzSpan="24">NCM</nz-form-label>
+            <nz-form-control>
+              <nz-select
+              nzSize="large"
+              [(ngModel)]="produto.ncm"
+              [ngModelOptions]="{ standalone: true }"
+              nzMode="tags">
+                <nz-option *ngFor="let produto of produtos" [nzValue]="produto.ncm" [nzLabel]="produto.ncm"></nz-option>
+            </nz-select>
+            </nz-form-control>
+        </nz-form-item>
         </nz-col>
         <nz-col nzXs="24" nzLg="12">
             <nz-form-item>
@@ -46,7 +52,7 @@
                 </nz-form-control>
             </nz-form-item>
         </nz-col>
-        
+
         <nz-col nzSpan="24">
             <nz-row nzJustify="end">
                 <button nz-button [nzSize]="'large'" nzType="primary" class="botao botaoAdicionar" (click)="submit()">Salvar</button>
