--- a/front-end/src/app/pages/adm/adm.component.html
+++ b/front-end/src/app/pages/adm/adm.component.html
@@ -11,7 +11,7 @@
                     <span nz-icon nzType="credit-card" nzTheme="outline"></span>
                     Preços
                   </li>
-                <li nz-menu-item routerLink="/adm/produtos" routerLinkActive="active">
+                <li nz-menu-item routerLink="/adm/ncms" routerLinkActive="active">
                     <span nz-icon nzType="credit-card" nzTheme="outline"></span>
                     NCM
                 </li>
