Sincronização, início de paginação

--- a/front-end/src/app/pages/adm/ncm/ncm.component.html
+++ b/front-end/src/app/pages/adm/ncm/ncm.component.html
@@ -33,8 +33,8 @@
                         <td [nzAlign]="'center'">
                             <nz-row [nzGutter]="[4, 4]" nzJustify="center">
                                 <nz-col>
-                                    <button nz-button [nzSize]="'large'" nzType="primary"
-                                        class="botao botaoEditar" (click)="editarItem(data)">Editar</button>
+                                    <button nz-button [nzSize]="'large'" nzType="primary" class="botao botaoEditar"
+                                        (click)="editarItem(data)">Editar</button>
                                 </nz-col>
                                 <nz-col>
                                     <button nz-button [nzSize]="'large'" nzType="primary" nzDanger
