--- a/front-end/src/app/pages/adm/multiplicadores/multiplicadores.component.html
+++ b/front-end/src/app/pages/adm/multiplicadores/multiplicadores.component.html
@@ -5,7 +5,7 @@
                 <nz-col nzXs="24" nzMd="18" class="barra-busca">
                     <nz-input-group nzSearch [nzAddOnAfter]="suffixIconButton" nzSize="large" class="barra-busca">
                         <input type="text" nz-input placeholder="Pesquisa" [(ngModel)]="termoBusca" class="inp-busca"
-                            (input)="atualizarTabela()" />
+                            (input)="buscar()" />
                     </nz-input-group>
                 </nz-col>
                 <nz-col nzXs="24" nzMd="6">
@@ -47,7 +47,8 @@
             </nz-row>
         </nz-col>
         <nz-col nzSpan="24">
-            <nz-table #headerTable [nzData]="registros" [nzShowPagination]="true" class="table">
+            <nz-table #headerTable [nzData]="registros" [nzShowPagination]="false" class="table" [nzTotal]="total"
+                [nzFrontPagination]="false" [nzFooter]="paginacao">
                 <thead>
                     <tr>
                         <th nzWidth="5%" nzAlign="center">Id</th>
@@ -87,18 +88,19 @@
                 </tbody>
 
             </nz-table>
-            <div class="paginacao">
-                <nz-pagination [nzPageIndex]="paginaIndex" [nzTotal]="total" nzShowSizeChanger
-                    [nzPageSize]="paginaTamanho" (nzPageIndexChange)="atualizarPagina($event)"
-                    (nzPageSizeChange)="tamanhoPagina($event)" [nzPageSizeOptions]=[5,10,20,30,40,50]>
-                </nz-pagination>
-            </div>
         </nz-col>
     </nz-row>
 </app-adm>
 
 <ng-template #suffixIconButton>
-    <button nz-button nzType="primary" nzSearch (click)="atualizarTabela()" class="btn-inp-busca">
+    <button nz-button nzType="primary" nzSearch (click)="buscar()" class="btn-inp-busca">
         <span nz-icon nzType="search"></span>
     </button>
+</ng-template>
+
+<ng-template #paginacao>
+    <nz-pagination [nzPageIndex]="paginaIndex" [nzTotal]="total" nzShowSizeChanger
+        [nzPageSize]="paginaTamanho" (nzPageIndexChange)="atualizarPagina($event)"
+        (nzPageSizeChange)="tamanhoPagina($event)" [nzPageSizeOptions]=[5,10,20,30,40,50]>
+    </nz-pagination>
 </ng-template>
